# ITMO-HDU-PC

./: .gitignore  环境信息.docx
lab1/: CMakeLists.txt  compile.sh  lab1 test result.xlsx  lab1.c
lab2/: CMakeLists.txt  Readme.md  compile.sh  install_lib.sh  lab2.c
lab2/FW_1.3.1_Lin64/: README  fwImage.h  fwJPEG.h  fwVideo.h
lab3/: CMakeLists.txt  compile.sh  lab3.c
lab4/: CMakeLists.txt  compile.sh  debug_compile.sh  lab4.c
